src/App.css
:root {
  --blue: rgb(21, 43, 65);
  --white: rgb(236, 236, 236);
}

body {
  background: var(--background-color);
  color: var(--text-color);
  font-weight: var(--font-weight);
  transition: background 0.2s ease-in-out, color 0.4s ease-in-out;
}

body.light {
  --background-color: var(--white);
  --text-color: var(--blue);
  --font-weight: 400;
}

body.dark {
  --background-color: var(--blue);
  --text-color: var(--white);
  --font-weight: 500;
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

